# meeting-status-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  monitor_meetings.py
meeting_detection/: __init__.py  config.py  detector.py  engine.py  models.py  network.py
meeting_detection/platform/: __init__.py  base.py  macos.py
