[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-status-py"
version = "1.2.0"
description = "Python library for detecting active video meetings on macOS"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["meeting", "detection", "zoom", "teams", "google-meet", "macos"]
authors = [
    {name = "Meeting Detection Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psutil>=5.9.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Jarus77/meeting-status-py"
Documentation = "https://github.com/Jarus77/meeting-status-py#readme"
Repository = "https://github.com/Jarus77/meeting-status-py"
"Bug Tracker" = "https://github.com/Jarus77/meeting-status-py/issues"

[tool.setuptools.packages.find]
include = ["meeting_detection*"]
